[gd_scene load_steps=2 format=3 uid="uid://c7onyn3lhluf1"]

[ext_resource type="Script" uid="uid://cg6apwehx13hg" path="res://script/title.gd" id="1_4ignj"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ignj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -33.0
offset_right = 49.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Host Server"

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Waiting..."

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Game"
